cm4all-beng-proxy (0.4.2) unstable; urgency=low

  * hashmap: fix corruption in slot chain
  * use monotonic clock to calculate expiry times

 --

cm4all-beng-proxy (0.4.1) unstable; urgency=low

  * translate: clear client->transformation
  * handler: check for translation errors
  * http-server: fixed assertion failure during shutdown
  * http-server: send "Keep-Alive" response header
  * worker: after fork(), call event_reinit() in the parent process
  * added valgrind build dependency
  * build with Debian's libevent-1.4 package

 -- Max Kellermann <mk@cm4all.com>  Tue, 10 Feb 2009 11:48:53 +0100

cm4all-beng-proxy (0.4) unstable; urgency=low

  * added support for transformation views
    - in the JavaScript API, mode=proxy is now deprecated
  * http-cache: fix segfault when request_headers==NULL
  * http-cache: store multiple (varying) versions of a resource
  * http-cache: use the "max-age" cache-control response

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Jan 2009 13:29:43 +0100

cm4all-beng-proxy (0.3.9) unstable; urgency=low

  * http-client: assume keep-alive is enabled on HTTP 1.1
  * processor: use configured/session path-info for mode=child URIs

 -- Max Kellermann <mk@cm4all.com>  Tue, 27 Jan 2009 13:07:51 +0100

cm4all-beng-proxy (0.3.8) unstable; urgency=low

  * processor: pass Content-Type and Content-Language headers from
    template
  * http-client: allow chunked response body without keep-alive

 -- Max Kellermann <mk@cm4all.com>  Fri, 23 Jan 2009 13:02:42 +0100

cm4all-beng-proxy (0.3.7) unstable; urgency=low

  * istream_subst: exit the loop if state==INSERT
  * istream_iconv: check if the full buffer could be flushed
  * worker: don't reinitialize session manager during shutdown

 -- Max Kellermann <mk@cm4all.com>  Thu, 15 Jan 2009 10:39:47 +0100

cm4all-beng-proxy (0.3.6) unstable; urgency=low

  * processor: ignore closing </header>
  * widget-http: now really don't check content-type in frame parents
  * parser: skip comments