@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.4.2) unstable; urgency=low
 
   * hashmap: fix corruption in slot chain
   * use monotonic clock to calculate expiry times
+  * processor: rewrite URIs in the EMBED, VIDEO, AUDIO tags
 
  --
 
